--- a/styles.css
+++ b/styles.css
@@ -15,55 +15,94 @@ body {
 
 .completed {
   color: green;
+  padding-left: 10px;
 }
 .reading {
   color: orange;
+  padding-left: 10px;
 }
-.toRead {
+.to-read {
   color: red;
+  padding-left: 10px;
+}
+
+.completed-section {
+  margin-bottom: 20px;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: column;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 30px;
+}
+
+.current-section{
+  margin-bottom: 20px;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: column;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 30px;
+}
+
+.to-read-section{
+  margin-bottom: 20px;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: column;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 30px;
+}
+.hide-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .books-row {
   display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-figure {
-  text-align: center;
-  box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.5);
-}
-
-.book-cover {
-  width: 140px;       
-  height: 210px;       
-  object-fit: cover;   
-  display: block;
+  height: 270px;
+  align-items: center;
+  gap: 30px;
+  width: fit-content;
+  padding-bottom: 10px;
 }
 
 .book-container {
   position: relative;
-  width: 50%;
-  max-width: 300px;
+  height: 220px;
+  width: 140px;
+}
+
+.book-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  text-align: center;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.5);
+  position: absolute;
 }
 
 .overlay {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  height: auto;
-  width: auto;
+  inset: 0;
   background: rgba(0, 0, 0, 0.55);
   color: white;
   opacity: 0;
-  padding: 100%;
-  text-align: center;
   transition: 0.4s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .book-container:hover .overlay {
   opacity: 1;
 }
-
