--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
   font-family: Arial;
+  margin: 0;
 }
 
-body {
+body .navbar{
   margin: 0;
-  padding: 0;
 }
 
 .navbar {
@@ -139,6 +139,7 @@ body {
   gap: 100px;
   width: fit-content;
   padding-bottom: 10px;
+  margin-left: 20px;
 }
 
 .book-container {
