--- a/styles/books.css
+++ b/styles/books.css
@@ -57,6 +57,7 @@
     width: fit-content;
     padding-bottom: 10px;
     margin-left: 20px;
+    margin-right: 20px;
     gap: 20px;
 }
 
@@ -65,6 +66,8 @@
     height: 220px;
     width: 140px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+
 }
 
 .book-container img {
@@ -74,6 +77,8 @@
     display: block;
     text-align: center;
     position: absolute;
+    border-radius: 5px;
+
 }
 
 .overlay {
@@ -88,6 +93,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    border-radius: 5px;
+
 }
 
 .book-container:hover .overlay {
